--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
   background: url("../images/simpsonswallpaper.jpg") no-repeat center center fixed;
   background-size: 100% 100%;
-  height:100%;
-  position::absolute;
+  height: 100%;
+  position: absolute;
   width: 100%;
 }
 
@@ -37,19 +37,20 @@ body {
 
 .btn {
   display:inline-block;
-  margin:0 auto;
+  margin: 0 auto;
   width: 490px;
 }
 
 #board {
-  margin-top: 5px;
+  margin-top: 2px
+  text-align: center;;
 }
 
 #simpsons {
   font-family: "Simpsons", monospace;
   color: yellow;
   text-shadow: -5px 2px #000000;
-  word-spacing: 4em;
+  word-spacing: 1em;
   padding-top: 10px;
 }
 
